--- a/news.html
+++ b/news.html
@@ -39,7 +39,7 @@
         </a>
     </div>
 
-    <div class="ui card" className="article_image">
+    <div class="ui centered card">
         <a class="image" href="#link">
           <img src="vct_img.png">
         </a>
