--- a/contact.html
+++ b/contact.html
@@ -5,37 +5,37 @@
 </head>
 
 
-<h1>WEBSITE NAME</h1>
-<body>
-    <div class="ui inverted pointing menu">
+<head>
+    <h1>WEBSITE NAME</h1>
+      <div class="ui inverted pointing menu">
         <a class="item" href="/Users/Dom/journalism-website/index.html">
-        Home
+          Home
         </a>
         <a class="item" href="/Users/Dom/journalism-website/about.html">
-        About
+          About
         </a>
         <a class="item" href="/Users/Dom/journalism-website/news.html">
-        Valorant News
+          Valorant News
         </a>
         <a class="active item" href="/Users/Dom/journalism-website/contact.html">
-        Contact
+          Contact
         </a>
-        <div class="right menu" href="">
-        <div class="item">
-            <div class="ui transparent icon input">
-            <input type="text" placeholder="Search...">
-            <i class="search link icon"></i>
+          <div class="right menu" href="">
+            <div class="item">
+              <div class="ui transparent icon input">
+                <input type="text" placeholder="Search...">
+                  <i class="search link icon"></i>
+              </div>
             </div>
-        </div>
-        </div>
+          </div>
         <a class="item" href="https://www.twitter.com/korexicano">
-        <i class="twitter square icon"></i>
+          <i class="twitter square icon"></i>
         </a>
         <a class="item" href="https://www.reddit.com/u/officialkorexicano">
-        <i class="reddit icon"></i>
+          <i class="reddit icon"></i>
         </a>
         <a class="item" href="dominic.maki@gmail.com">
-        <i class="google icon"></i>
+          <i class="google icon"></i>
         </a>
-    </div>
-</body>
+      </div>
+</head>
