--- a/news.html
+++ b/news.html
@@ -4,41 +4,42 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
 </head>
 
-
+<head>
 <h1>WEBSITE NAME</h1>
-<body>
-    <div class="ui inverted pointing menu">
-        <a class="item" href="/Users/Dom/journalism-website/index.html">
-        Home
-        </a>
-        <a class="item" href="/Users/Dom/journalism-website/about.html">
-        About
-        </a>
-        <a class="active item" href="/Users/Dom/journalism-website/news.html">
-        Valorant News
-        </a>
-        <a class="item" href="/Users/Dom/journalism-website/contact.html">
-        Contact
-        </a>
-        <div class="right menu" href="">
+  <div class="ui inverted pointing menu">
+    <a class="item" href="/Users/Dom/journalism-website/index.html">
+      Home
+    </a>
+    <a class="item" href="/Users/Dom/journalism-website/about.html">
+      About
+    </a>
+    <a class="active item" href="/Users/Dom/journalism-website/news.html">
+      Valorant News
+    </a>
+    <a class="item" href="/Users/Dom/journalism-website/contact.html">
+      Contact
+    </a>
+      <div class="right menu" href="">
         <div class="item">
-            <div class="ui transparent icon input">
+          <div class="ui transparent icon input">
             <input type="text" placeholder="Search...">
-            <i class="search link icon"></i>
-            </div>
+              <i class="search link icon"></i>
+          </div>
         </div>
-        </div>
-        <a class="item" href="https://www.twitter.com/korexicano">
-        <i class="twitter square icon"></i>
-        </a>
-        <a class="item" href="https://www.reddit.com/u/officialkorexicano">
-        <i class="reddit icon"></i>
-        </a>
-        <a class="item" href="dominic.maki@gmail.com">
-        <i class="google icon"></i>
-        </a>
-    </div>
+      </div>
+    <a class="item" href="https://www.twitter.com/korexicano">
+      <i class="twitter square icon"></i>
+    </a>
+    <a class="item" href="https://www.reddit.com/u/officialkorexicano">
+      <i class="reddit icon"></i>
+    </a>
+    <a class="item" href="dominic.maki@gmail.com">
+      <i class="google icon"></i>
+    </a>
+  </div>
+</head>
 
+<body>
     <div class="ui centered card">
         <a class="image" href="#link">
           <img src="vct_img.png">
@@ -49,7 +50,7 @@
             <a class="preview">Article preview text</a>
           </div>
         </div>
-      </div>
+    </div>
 
     <div class="ui very relaxed items">
         <div class="item">
@@ -74,4 +75,5 @@
             </div>
           </div>
         </div>
+    </div>
 </body>
