--- a/news.html
+++ b/news.html
@@ -52,7 +52,7 @@
         </div>
     </div>
 
-    <div class="ui very relaxed items">
+    <div class="ui divided items">
         <div class="item">
           <div class="image">
             <img src="vct_img.png">
