--- a/news.html
+++ b/news.html
@@ -6,51 +6,54 @@
 
 <head>
 <h1>WEBSITE NAME</h1>
-  <div class="ui inverted pointing menu">
-    <a class="item" href="/Users/Dom/journalism-website/index.html">
-      Home
-    </a>
-    <a class="item" href="/Users/Dom/journalism-website/about.html">
-      About
-    </a>
-    <a class="active item" href="/Users/Dom/journalism-website/news.html">
-      Valorant News
-    </a>
-    <a class="item" href="/Users/Dom/journalism-website/contact.html">
-      Contact
-    </a>
-      <div class="right menu" href="">
-        <div class="item">
-          <div class="ui transparent icon input">
-            <input type="text" placeholder="Search...">
-              <i class="search link icon"></i>
+  <div class="ui attached stackable menu">
+    <div class="ui container">
+      <a class="item" href="/Users/Dom/journalism-website/index.html">
+        Home
+      </a>
+      <a class="item" href="/Users/Dom/journalism-website/about.html">
+        About
+      </a>
+      <a class="active item" href="/Users/Dom/journalism-website/news.html">
+        Valorant News
+      </a>
+      <a class="item" href="/Users/Dom/journalism-website/contact.html">
+        Contact
+      </a>
+        <div class="right menu" href="">
+          <div class="item">
+            <div class="ui transparent icon input">
+              <input type="text" placeholder="Search...">
+                <i class="search link icon"></i>
+            </div>
           </div>
         </div>
-      </div>
-    <a class="item" href="https://www.twitter.com/korexicano">
-      <i class="twitter square icon"></i>
-    </a>
-    <a class="item" href="https://www.reddit.com/u/officialkorexicano">
-      <i class="reddit icon"></i>
-    </a>
-    <a class="item" href="dominic.maki@gmail.com">
-      <i class="google icon"></i>
-    </a>
+      <a class="item" href="https://www.twitter.com/korexicano">
+        <i class="twitter square icon"></i>
+      </a>
+      <a class="item" href="https://www.reddit.com/u/officialkorexicano">
+        <i class="reddit icon"></i>
+      </a>
+      <a class="item" href="dominic.maki@gmail.com">
+        <i class="google icon"></i>
+      </a>
+    </div>
   </div>
 </head>
 
 <body>
-    <div class="ui centered card">
-        <a class="image" href="#link">
-          <img src="vct_img.png">
-        </a>
-        <div class="content">
-          <a class="header" href="#link">Article name</a>
-          <div class="meta">
-            <a class="preview">Article preview text</a>
-          </div>
-        </div>
+  
+    <div class="ui container segment">
+      <div class="image">
+        <img class="ui centered medium image" src="vct_img.png">
+      </div>
+      <div class="ui center aligned header">
+        Article Title
+      </div>
     </div>
+
+
+
 
     <div class="ui divided items">
         <div class="item">
