--- a/news.html
+++ b/news.html
@@ -42,41 +42,54 @@
 </head>
 
 <body>
+
+  <div class="ui segment">
+    <div class="image">
+      <img class="ui centered medium image" src="vct_img.png">
+    </div>
+    <div class="ui center aligned header">
+      Article Title
+    </div>
+  </div>
   
-    <div class="ui container segment">
-      <div class="image">
-        <img class="ui centered medium image" src="vct_img.png">
+
+  <div class="ui segment">
+
+    <div class="ui left rail">
+      <div class="ui segment">
+        left content
       </div>
-      <div class="ui center aligned header">
-        Article Title
+    </div>
+    <div class="ui right rail">
+      <div class="ui segment">
+        right content
       </div>
     </div>
 
-
-
-
-    <div class="ui divided items">
-        <div class="item">
-          <div class="image">
-            <img src="vct_img.png">
-          </div>
-          <div class="content">
-            <a class="ui header" href="#link">Link Header</a>
-            <div class="description">
-              <p>article</p>
-            </div>
+    <div class="ui items">
+      <div class="item">
+        <div class="image">
+          <img class="centered image" src="vct_img.png">
+        </div>
+        <div class="content">
+          <a class="ui header" href="#link">Link Header</a>
+          <div class="description">
+            <p>article</p>
           </div>
         </div>
-        <div class="item">
-          <div class="image">
-            <img src="vct_img.png">
-          </div>
-          <div class="content">
-            <a class="ui header" href="#link">Link Header</a>
-            <div class="description">
-              <p>article</p>
-            </div>
+      </div>
+    <div class="ui section divider"></div>
+      <div class="item">
+        <div class="image">
+          <img src="vct_img.png">
+        </div>
+        <div class="content">
+          <a class="ui header" href="#link">Link Header</a>
+          <div class="description">
+            <p>article</p>
           </div>
         </div>
-    </div>
+      </div>
+    </div> 
+  </div>
 </body>
