--- a/news.html
+++ b/news.html
@@ -43,53 +43,58 @@
 
 <body>
 
-  <div class="ui segment">
-    <div class="image">
-      <img class="ui centered medium image" src="vct_img.png">
-    </div>
-    <div class="ui center aligned header">
-      Article Title
-    </div>
-  </div>
-  
+  <div class="ui grid container">
+    <div class="ui four wide column"></div>
+    <div class="ui eight wide column">
 
-  <div class="ui segment">
-
-    <div class="ui left rail">
-      <div class="ui segment">
-        left content
-      </div>
-    </div>
-    <div class="ui right rail">
-      <div class="ui segment">
-        right content
-      </div>
-    </div>
-
-    <div class="ui items">
-      <div class="item">
+      <div class="ui segment" style="padding-right: 200px; padding-left: 200px;">
         <div class="image">
-          <img class="centered image" src="vct_img.png">
+          <img class="ui centered medium image" src="vct_img.png">
         </div>
-        <div class="content">
-          <a class="ui header" href="#link">Link Header</a>
-          <div class="description">
-            <p>article</p>
+        <div class="ui center aligned header">
+          Article Title
+        </div>
+      </div>
+      
+
+      <div class="ui segment" style="padding-right: 150px;">
+
+        <div class="ui left rail" style="width: 300px;">
+          <div class="ui segment">
+            left content
           </div>
         </div>
-      </div>
-    <div class="ui section divider"></div>
-      <div class="item">
-        <div class="image">
-          <img src="vct_img.png">
-        </div>
-        <div class="content">
-          <a class="ui header" href="#link">Link Header</a>
-          <div class="description">
-            <p>article</p>
+        <div class="ui right rail" style="width: 300px">
+          <div class="ui segment">
+            right content
           </div>
         </div>
+
+        <div class="ui divided items">
+          <div class="item">
+            <div class="image">
+              <img class="centered image" src="vct_img.png">
+            </div>
+            <div class="content">
+              <a class="ui header" href="#link">Link Header</a>
+              <div class="description">
+                <p>article</p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="image">
+              <img src="vct_img.png">
+            </div>
+            <div class="content">
+              <a class="ui header" href="#link">Link Header</a>
+              <div class="description">
+                <p>article</p>
+              </div>
+            </div>
+          </div>
+        </div> 
       </div>
-    </div> 
+    </div>
   </div>
 </body>
