--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
 </head>
 
-
+<head>
 <h1>WEBSITE NAME</h1>
   <div class="ui attached stackable menu">
     <div class="ui container">
@@ -40,3 +40,83 @@
     </div>
   </div>
 </head>
+
+<body>
+
+  <div class="ui grid container">
+    <div class="ui four wide column"></div>
+    <div class="ui eight wide column">
+
+      <div class="ui segment" style="padding-right: 200px; padding-left: 200px;">
+        <div class="image">
+          <img class="ui centered medium image" src="vct_img.png">
+        </div>
+        <div class="ui center aligned header">
+          Article Title
+        </div>
+      </div>
+      
+
+      <div class="ui segment" style="padding-right: 150px;">
+
+        <div class="ui left rail" style="width: 300px;">
+          <div class="ui segment">
+            left content
+          </div>
+        </div>
+        <div class="ui right rail" style="width: 300px">
+          <div class="ui segment">
+            right content
+          </div>
+        </div>
+
+        <div class="ui divided items">
+          <div class="item">
+            <div class="ui tiny image">
+              <img src="vct_img.png">
+            </div>
+            <div class="content">
+              <a class="ui header" href="#link">Link Header</a>
+              <div class="description">
+                <p>article</p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="ui tiny image">
+              <img src="vct_img.png">
+            </div>
+            <div class="content">
+              <a class="ui header" href="#link">Link Header</a>
+              <div class="description">
+                <p>article</p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="ui tiny image">
+              <img src="vct_img.png">
+            </div>
+            <div class="content">
+              <a class="ui header" href="#link">Link Header</a>
+              <div class="description">
+                <p>article</p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="ui tiny image">
+              <img src="vct_img.png">
+            </div>
+            <div class="content">
+              <a class="ui header" href="#link">Link Header</a>
+              <div class="description">
+                <p>article</p>
+              </div>
+            </div>
+          </div>
+        </div> 
+      </div>
+    </div>
+  </div>
+</body>
