--- a/contact.html
+++ b/contact.html
@@ -6,18 +6,25 @@
 
 
 <head>
-    <h1>WEBSITE NAME</h1>
-      <div class="ui inverted pointing menu">
-        <a class="item" href="/Users/Dom/journalism-website/index.html">
+  <h1>WEBSITE NAME</h1>
+    <div class="ui attached stackable menu">
+      <div class="ui container">
+        <a class="item" href="index.html">
           Home
         </a>
-        <a class="item" href="/Users/Dom/journalism-website/about.html">
+        <a class="item" href="about.html">
           About
         </a>
-        <a class="item" href="/Users/Dom/journalism-website/article_page.html">
-          Valorant News
-        </a>
-        <a class="active item" href="/Users/Dom/journalism-website/contact.html">
+        <div class="ui simple dropdown item">
+          News
+          <i class="dropdown icon"></i>
+          <div class="menu">
+            <a class="item" href="article_page.html"></i> VALORANT</a>
+            <a class="item" href="article_page.html"></i> LEAGUE OF LEGENDS</a>
+            <a class="item" href="article_page.html"></i> HALO</a>
+          </div>
+        </div>
+        <a class="active item" href="contact.html">
           Contact
         </a>
           <div class="right menu" href="">
@@ -38,4 +45,5 @@
           <i class="google icon"></i>
         </a>
       </div>
-</head>
+    </div>
+  </head>
