--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@
 <h1>WEBSITE NAME</h1>
   <div class="ui attached stackable menu">
     <div class="ui container">
-      <a class="active item" href="/Users/Dom/journalism-website/index.html">
+      <a class="active item" href="index.html">
         Home
       </a>
-      <a class="item" href="/Users/Dom/journalism-website/about.html">
+      <a class="item" href="about.html">
         About
       </a>
-      <a class="item" href="/Users/Dom/journalism-website/news.html">
-        Valorant News
-      </a>
-      <a class="item" href="/Users/Dom/journalism-website/contact.html">
+      <div class="ui simple dropdown item">
+        News
+        <i class="dropdown icon"></i>
+        <div class="menu">
+          <a class="item" href="article_page.html"></i> VALORANT</a>
+          <a class="item" href="article_page.html"></i> LEAGUE OF LEGENDS</a>
+          <a class="item" href="article_page.html"></i> HALO</a>
+        </div>
+      </div>
+      <a class="item" href="contact.html">
         Contact
       </a>
         <div class="right menu" href="">
@@ -46,7 +52,6 @@
   <div class="ui grid container">
     <div class="ui four wide column"></div>
     <div class="ui eight wide column">
-
       <div class="ui segment" style="padding-right: 200px; padding-left: 200px;">
         <div class="image">
           <img class="ui centered medium image" src="vct_img.png">
@@ -58,7 +63,6 @@
       
 
       <div class="ui segment" style="padding-right: 150px;">
-
         <div class="ui left rail" style="width: 300px;">
           <div class="ui segment">
             left content
