--- a/article_page.html
+++ b/article_page.html
@@ -5,37 +5,76 @@
 </head>
 
 
-<h1>WEBSITE NAME</h1>
-  <div class="ui attached stackable menu">
-    <div class="ui container">
-      <a class="item" href="/Users/Dom/journalism-website/index.html">
-        Home
-      </a>
-      <a class="item" href="/Users/Dom/journalism-website/about.html">
-        About
-      </a>
-      <a class="active item" href="/Users/Dom/journalism-website/article_page.html">
-        Valorant News
-      </a>
-      <a class="item" href="/Users/Dom/journalism-website/contact.html">
-        Contact
-      </a>
-        <div class="right menu" href="">
-          <div class="item">
-            <div class="ui transparent icon input">
-              <input type="text" placeholder="Search...">
-                <i class="search link icon"></i>
+<head>
+  <h1>WEBSITE NAME</h1>
+    <div class="ui attached stackable menu">
+      <div class="ui container">
+        <a class="item" href="index.html">
+          Home
+        </a>
+        <a class="item" href="about.html">
+          About
+        </a>
+        <div class="ui simple dropdown item">
+          News
+          <i class="dropdown icon"></i>
+          <div class="menu">
+            <a class="active item" href="article_page.html"></i> VALORANT</a>
+            <a class="active item" href="article_page.html"></i> LEAGUE OF LEGENDS</a>
+            <a class="active item" href="article_page.html"></i> HALO</a>
+          </div>
+        </div>
+        <a class="item" href="contact.html">
+          Contact
+        </a>
+          <div class="right menu" href="">
+            <div class="item">
+              <div class="ui transparent icon input">
+                <input type="text" placeholder="Search...">
+                  <i class="search link icon"></i>
+              </div>
+            </div>
+          </div>
+        <a class="item" href="https://www.twitter.com/korexicano">
+          <i class="twitter square icon"></i>
+        </a>
+        <a class="item" href="https://www.reddit.com/u/officialkorexicano">
+          <i class="reddit icon"></i>
+        </a>
+        <a class="item" href="dominic.maki@gmail.com">
+          <i class="google icon"></i>
+        </a>
+      </div>
+    </div>
+  </head>
+
+  <body>
+
+    <div class="ui grid container">
+      <div class="ui four wide column"></div>
+      <div class="ui eight wide column">
+        <div class="ui segment" style="padding-right: 200px; padding-left: 200px;">
+          <div class="ui center aligned header">
+            Article Title
+          </div>
+          <div class="image">
+            <img class="ui centered medium image" src="vct_img.png">
+          </div>
+        </div>
+        
+  
+        <div class="ui segment" style="padding-right: 150px;">
+          <div class="ui left rail" style="width: 300px;">
+            <div class="ui segment">
+              left content
+            </div>
+          </div>
+          <div class="ui right rail" style="width: 300px">
+            <div class="ui segment">
+              right content
             </div>
           </div>
         </div>
-      <a class="item" href="https://www.twitter.com/korexicano">
-        <i class="twitter square icon"></i>
-      </a>
-      <a class="item" href="https://www.reddit.com/u/officialkorexicano">
-        <i class="reddit icon"></i>
-      </a>
-      <a class="item" href="dominic.maki@gmail.com">
-        <i class="google icon"></i>
-      </a>
+      </div>
     </div>
-  </div>
+  </body>
