--- a/article_page.html
+++ b/article_page.html
@@ -72,19 +72,19 @@
           
         </div>
 
-        <!--<div class="ui comments">
+        <div class="ui comments">
           <h3 class="ui dividing header">Comments</h3>
           <div class="comment">
             <a class="avatar">
               <img src="/images/avatar/small/matt.jpg">
             </a>
             <div class="content">
-              <a class="author">Matt</a>
+              <a class="author">Person</a>
               <div class="metadata">
-                <span class="date">Today at 5:42PM</span>
+                <span class="date">Day at TIMEAM/PM</span>
               </div>
               <div class="text">
-                How artistic!
+                Example text
               </div>
               <div class="actions">
                 <a class="reply">Reply</a>
@@ -96,12 +96,12 @@
               <img src="/images/avatar/small/elliot.jpg">
             </a>
             <div class="content">
-              <a class="author">Elliot Fu</a>
+              <a class="author">Person</a>
               <div class="metadata">
-                <span class="date">Yesterday at 12:30AM</span>
+                <span class="date">Day at TIMEPM/AM</span>
               </div>
               <div class="text">
-                <p>This has been very useful for my research. Thanks as well!</p>
+                <p>Example text</p>
               </div>
               <div class="actions">
                 <a class="reply">Reply</a>
@@ -113,12 +113,12 @@
                   <img src="/images/avatar/small/jenny.jpg">
                 </a>
                 <div class="content">
-                  <a class="author">Jenny Hess</a>
+                  <a class="author">Person</a>
                   <div class="metadata">
-                    <span class="date">Just now</span>
+                    <span class="date">Time</span>
                   </div>
                   <div class="text">
-                    Elliot you are always so right :)
+                    Example text
                   </div>
                   <div class="actions">
                     <a class="reply">Reply</a>
@@ -132,12 +132,12 @@
               <img src="/images/avatar/small/joe.jpg">
             </a>
             <div class="content">
-              <a class="author">Joe Henderson</a>
+              <a class="author">Person</a>
               <div class="metadata">
-                <span class="date">5 days ago</span>
+                <span class="date">Time</span>
               </div>
               <div class="text">
-                Dude, this is awesome. Thanks so much
+                Example text
               </div>
               <div class="actions">
                 <a class="reply">Reply</a>
@@ -152,7 +152,7 @@
               <i class="icon edit"></i> Add Reply
             </div>
           </form>
-        </div>-->
+        </div>
   
         <div class="ui segment" style="padding-right: 150px;">
           <div class="ui left rail" style="width: 300px;">
